Fix alignment of radio buttons and checkboxes

--- a/static/style.css
+++ b/static/style.css
@@ -54,6 +54,16 @@ body {
     font-size: 18px;
 }
 
+.form {
+    justify-content: center;
+    display: flex;
+}
+
+.form label {
+    display: inline-block;
+    min-width: 150px;
+}
+
 .btn, .btn-remove, .btn-edit, .btn-menu {
     border-radius: 5px;
     background-color: #0454aa;
